# itchy-tradebot

./: .gitignore  ARCHITECTURE.mmd  CLAUDE.md  INSTALL_DB.bat  INSTALL_PGVECTOR.bat  INTENT.md  PROGRESS.md  STYLE.md  ev_table.py  monte_carlo_sim.py  nextsteps.md  prop_firm_monte_carlo.py  pyproject.toml  success.md
.claude/: settings.local.json
config/: database.yaml  discovery.yaml  edges.yaml  health_monitor.yaml  instruments.yaml  mega_vision.yaml  optimization_loop.yaml  optimizer_instruments.yaml  provider.yaml  strategy.yaml
docs/: 2026-04-10-ftm-brainstorm-refactor.md  2026-04-10-fx-at-one-glance-strategy.md  mega_vision_design.md
prompts/: mega_vision_system.md  mega_vision_user_template.md
reports/: dashboard_20260328_160700.html  dashboard_20260329_081659.html  dashboard_20260401_084033.html  dashboard_20260401_085053.html  dashboard_20260401_090112.html  dashboard_20260401_092644.html  dashboard_20260401_095829.html  dashboard_20260411_000712.html  dashboard_20260411_001538.html  dashboard_20260411_002557.html  dashboard_20260411_010746.html  dashboard_20260411_062603.html  dashboard_20260411_065117.html  dashboard_20260411_070710.html  dashboard_20260411_072155.html  dashboard_20260411_074114.html  equity_curve_20260328_160659.csv  equity_curve_20260411_000709.csv  equity_curve_20260411_001536.csv  equity_curve_20260411_010743.csv  equity_curve_20260411_062600.csv  equity_curve_20260411_065115.csv  equity_curve_20260411_070708.csv  equity_curve_20260411_072154.csv  equity_curve_20260411_074112.csv  mcl_optimization_20260411_213237.json  mcl_optimization_20260412_005213.json  opt_iter_001_20260330_173002.json  opt_iter_001_20260330_202337.json  opt_iter_001_20260330_203156.json  opt_iter_001_20260331_032138.json  opt_iter_001_20260331_032138_claude_reasoning.txt  opt_iter_002_20260330_174717.json  opt_iter_002_20260330_204555.json  opt_iter_002_20260331_043156.json  opt_iter_002_20260331_043156_claude_reasoning.txt  opt_iter_003_20260330_180204.json  opt_iter_003_20260330_180204_claude_reasoning.txt  opt_iter_003_20260331_052148.json  opt_iter_003_20260331_052148_claude_reasoning.txt  (+21 more)
scripts/: download_gold_2020_to_2026.py  download_gold_2026_ytd.py  download_history.py  download_micro_futures_since_2024.py  download_projectx_gold.py  download_twelvedata.py  install_extensions.ps1  list_projectx_contracts.py  optimize_mcl_fast.py  optimize_mcl_oil.py  run_adaptive_optimizer.py  run_demo_challenge.py  run_discovery_loop.py  run_optimization_loop.py  run_permutation_optimization.py  run_sss_backtest.py  run_validation.py  test_mcl_trend_filter.py
src/: __init__.py
tests/: test_adaptive_relaxer.py  test_adaptive_runner.py  test_asian_breakout.py  test_ast_validator.py  test_backtest.py  (+108 more)
(+338 files in other folders)
